--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://raihanromi.github.io/portfolio_react/",
+  "homepage": "https://raihanromi.github.io/Portfolio/",
   "name": "portfolio-website",
   "private": true,
   "version": "0.0.0",
